# Mravel_Backend

./: .dockerignore  .gitignore  pom.xml
docker/: docker-compose.yml
libs/: pom.xml
services/: pom.xml
services/ai-plan-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/ai-plan-service/app/: config.py  main.py
services/ai-plan-service/app/agent/: edits.py  links.py  orchestrator.py  tools.py
services/ai-plan-service/app/api/: ai_plan.py  dependencies.py  schemas.py
services/ai-plan-service/app/clients/: catalog_client.py  plan_client.py  web_search_client.py
services/ai-plan-service/app/core/: errors.py  response.py  security.py
services/ai-plan-service/app/llm/: base.py  factory.py  openai_client.py  stub.py
services/ai-plan-service/app/models/: session.py
services/ai-plan-service/app/services/: approval_service.py  assistant.py  budget_editor.py  catalog_location.py  constraint_extractor.py  draft_composer.py  edit_service.py  fill_editor.py  geo.py  pricing.py  retime_editor.py  session_store.py
services/ai-plan-service/docs/: AI_OVERVIEW.md  CODE_GUIDE.md  STORAGE.md
services/ai-plan-service/tests/: conftest.py  manual_probe.py  test_assistant.py  test_budget_editor.py  test_catalog_links.py  test_catalog_location.py  test_city_scheduling.py  test_day_targeting.py  test_duration_defaults.py  test_edit_flow.py  test_fill_editor.py  test_freshness.py  test_link_format.py  test_llm_fallback.py  test_retime_editor.py  test_scheduler.py  test_search_plans.py  test_session_flow.py
(+907 files in other folders)
